# pong

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt
.github/workflows/: build.yml  format.yml
data/scripts/: ball.lua  player.lua  score.lua  state.lua
include/: game.h
include/comp/: collider.h  label.h  name.h  paddle.h  player.h  script.h  sprite.h  sprite_renderer.h  transform.h
include/sys/: physics.h  player_controller.h  render.h  scripts.h
src/: CMakeLists.txt  game.cpp  main.cpp
src/comp/: script.cpp
src/core/: CMakeLists.txt
src/core/include/core/comp/: collider.h  label.h  name.h  script.h  sprite.h  transform.h
src/core/include/core/comp/script/: builder.h  entry.h  script.h
src/core/include/core/entity/: builder.h
src/core/include/core/scene/: scene.h  scene_manager.h
src/core/include/core/sys/: physics.h  render.h  scripts.h
src/core/include/core/util/: file_reader.h
src/core/src/comp/: script.cpp
src/core/src/comp/script/: builder.cpp  script.cpp
src/core/src/entity/: builder.cpp
src/core/src/scene/: scene.cpp  scene_manager.cpp
src/core/src/sys/: physics.cpp  render.cpp  scripts.cpp
src/core/src/util/: file_reader.cpp
src/core/test/: CMakeLists.txt  collision_test.cpp  scripts_test.cpp
src/pong/: CMakeLists.txt
src/pong/include/: game.h
src/pong/src/: game.cpp
src/sys/: physics.cpp  player_controller.cpp  render.cpp  scripts.cpp
test/: CMakeLists.txt
